fixed big whitespace area on mobile view

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Corinthia:wght@700&family=Poppins:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
 :root {
   --main-color: #5168f4;
@@ -17,7 +17,7 @@
 }
 body {
   font-family: "Poppins", sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   line-height: 1.8;
   color: var(--dark-color);
@@ -63,12 +63,12 @@ ul {
 .logo a {
   display: inline-block;
   margin-bottom: 60px;
-  font-size: 18px;
+  font-size: 19px;
   font-weight: 700;
   color: var(--dark-color);
 }
 .logo span {
-  color: #213ef1;
+  color: #071a96;
 }
 .content-heading p {
   color: var(--light-color);
@@ -143,8 +143,8 @@ form :is(p, label) a:hover,
   height: 200%;
   background-color: #fff;
   border-radius: 50%;
-  transform: translate3d(-27%, -21%, 0);
-  -webkit-transform: translate3d(-27%, -21%, 0);
+  transform: translate3d(-27%, 21%, 0);
+  -webkit-transform: translate3d(-27%, 21%, 0);
   animation: move 0.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
   -webkit-animation: move 0.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
